--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "18.2.7",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
+    "js-yaml": "^4.1.0",
     "next": "13.4.19",
     "react": "^18.2.0",
     "react-dom": "18.2.0",
@@ -21,5 +22,6 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@types/js-yaml": "^4.0.6"
   }
 }
