--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "sass": "^1.66.1",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.6"
